Finish feature cycle detection Scrapped the idea of trying to fix it, takes too long and UX is unpractical

--- a/src/style.css
+++ b/src/style.css
@@ -273,6 +273,14 @@ main {
 	margin-right: 20px;
 }
 
+.alert-info {
+	color: #ccc;
+}
+
+.alert-error {
+	color: var(--error-2);
+}
+
 .version-picker {
 	background-color: var(--dark-2);
 	color: #eee;
@@ -298,7 +306,7 @@ main {
 }
 
 .prompt-info {
-	color: #bbb;
+	color: #ccc;
 }
 
 .pack-prompt button {
